# watchvuln-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  _typos.toml  cliff.toml  deny.toml
.devcontainer/: .env  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
common-error/: Cargo.toml
common-error/src/: ext.rs
config/: development.yaml
deployment/: docker-compose.yaml
deployment/config/: development.yaml
deployment/env/: app.env  postgres.env
fixtures/: seebug.html  seebug_many_cve.html
macros/: Cargo.toml
macros/src/: lib.rs  stack_trace_debug.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240417_015641_create_vuln_information.rs  m20240531_131002_alter_vuln_add_is_valuable_field.rs
src/: app.rs  cli.rs  config.rs  db.rs  environment.rs  error.rs  grab_manager.rs  help.rs  lib.rs  logger.rs  main.rs  search.rs  tera.rs  utils.rs
src/grab/: anti.rs  avd.rs  kev.rs  mod.rs  oscs.rs  seebug.rs  threatbook.rs  ti.rs
src/models/: error.rs  mod.rs  vuln_informations.rs
src/models/_entities/: mod.rs  prelude.rs  vuln_informations.rs
src/push/: dingding.rs  lark.rs  mod.rs  msg_template.rs  telegram.rs
src/utils/: http_client.rs  mod.rs
tests/html/: avd_detail.html
