[package]
name = "watchvuln-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
clap = { version = "4.5.4", features = ["derive"] }

serde = {version ="1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.9"
serde_variant = "0.1"

lazy_static = "1.4"
eyre = "0.6.12"
fs-err = "2.11"
tera = "1.19.1"

tokio = { version = "1.33.0", features = ["full"]}
tokio-cron-scheduler = "0.10.0"
