[package]
name = "watchvuln-rs"
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./migration", "."]

[dependencies]
thiserror = "1"
clap = { version = "4.5.4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_variant = "0.1"

lazy_static = "1.4"
eyre = "0.6.12"
fs-err = "2.11"
tera = "1.19.1"

tokio = { version = "1.33.0", features = ["full"] }
tokio-cron-scheduler = "0.11.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
url = "2.5"
regex = "1.10"
scraper = { version = "0.20", features = ["atomic"] }

tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "time",
] }
tracing = "0.1.40"
time = { version = "0.3.36", features = ["macros"] }

chrono = { version = "0.4", features = ["serde"] }

async-trait = "0.1.74"

sea-orm = { version = "1.0.1", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
migration = { path = "migration" }
teloxide = { version = "0.13", features = ["macros"] }
sha2 = "0.10.8"
hmac = "0.12.1"
base64 = "0.22.1"
chrono-tz = "0.10.0"
octocrab = "0.39.0"
